<resources>
    <string name="app_name">SimpleChoose</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="enter_to_exit_again">再按一次退出程序</string>
    <string name="no_open_now">暂不开放</string>
    <string name="empty_text">这颗星球没有您想要的数据</string>
    <string name="error_text">我又失败了，呜呜呜…</string>
    <string name="page_title_test_paper">考试</string>
    <string name="click_yes_to_test_paper">点击确定开始考试</string>
    <string name="prev_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="show_test_detail">答题情况</string>
    <string name="submit_test_paper">交卷</string>
    <string name="test_paper_result">考试成绩</string>
    <string name="right_title">正确：</string>
    <string name="left_title">错误：</string>
    <string name="uncheck_title">未选：</string>
    <string name="use_time_title">用时：</string>
    <string name="use_time_and_value">用时：%1$s</string>
    <string name="checked">已选：</string>
    <string name="parse">解析：</string>
    <string name="show_parse">查看解析</string>
    <string name="number_2_bit">%1$.2f</string>
    <string name="percent_2_bit">%1$.2f%%</string>
    <string name="percent">%1$d%%</string>
    <string name="kb">%1$dK</string>
    <string name="arg_2_string_string">%1$s. %2$s</string>
    <string name="arg_3_string_number_string">%1$s%2$d. %3$s</string>
    <string name="no_parse">暂无解析</string>
    <string name="first_line_space">\u3000\u3000%1$s</string>
    <string name="time_count_title">剩余时间：</string>
    <string name="loading">加载中…</string>
    <string name="calculate_score">评分中…</string>
    <string name="exit_test_paper_title">退出考试</string>
    <string name="exit_test_paper_desc">是否确定退出考试？</string>
    <string name="has_un_check_title">提示</string>
    <string name="has_un_check_desc">您还有未答的题目，是否确认交卷？</string>
    
    <string name="socket_timeout">请求超时</string>
    <string name="no_net">无网络</string>
    <string name="http_server_error">服务器错误，请稍后再试！</string>
    <string name="http_not_found">无法连接服务器，请稍后再试！</string>

    <string name="please_choose_image_first">请先选择图片</string>
    <string name="image_compress">图片压缩</string>
    <string name="chart">图表</string>
    <string name="auto_layout">屏幕适配</string>
    <string name="setting">设置</string>
    <string name="test_paper_times">考试时间</string>
    <string name="scan_code">扫一扫</string>
    <string name="qr_create">生成二维码</string>
    <string name="save_qr_code">保存二维码到相册</string>
    <string name="save_to_photo">保存到相册</string>
    <string name="camera">拍照</string>
    <string name="photo">相册</string>
    <string name="you_need_granted_permission">您需要授予读写文件权限才能保存到相册中</string>
    <string name="you_need_granted_permission_to_read_photo">您需要授予权限才能使用该功能</string>
    <string name="save_success">保存成功：%1$s</string>
    <string name="save_failure">保存失败：%1$s</string>
    <string name="score">分数：%1$.2f</string>
    <string name="minute">分钟</string>
    <string name="arg_minute">%1$d分钟</string>
    <string name="choose_time">选择时间</string>
    <string name="click_item_choose_goto_next">选择后自动跳到下一题</string>
    <string name="multi_choose_no_goto_next">多选题不会自动跳下一题</string>
    <string name="test_paper_record">考试记录</string>
    <string name="first_run_accept_title">使用说明</string>
    <string name="first_run_accept_desc">
        1. 本App仅用于学习交流，不得用于商业用途，否则造成的后果自负。\n
        2. 本App所展示的数据均来自网上，收集于此以供学习交流使用。如有侵权，请联系删除，邮箱：604952198@qq.com。\n
    </string>
    <string name="qr_content_hint">请输入内容</string>
    <string name="height">高度（px）</string>
    <string name="width">宽度（px）</string>
    <string name="qr_size">尺寸(px)</string>
    <string name="content_can_not_empty">内容不能为空</string>
    <string name="qr_size_can_not_less_50">尺寸最小为50px</string>
    <string name="qr_default_size">200</string>
    <string name="add_logo">添加logo</string>
    <string name="choose_image">选择图片</string>
    <string name="please_compress_image_first">请先压缩图片</string>
    <string name="accessibility_auto_install">无障碍开发——自动安装</string>
    <string name="list_test">多级列表测试</string>
</resources>