<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clt_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="?colorMain"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back"
            android:layout_marginStart="@dimen/page_margin"
            app:tint="?colorPageTitle"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/qr_create"
            android:textSize="@dimen/text_page_title"
            android:textColor="?colorPageTitle"
            android:gravity="center"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/qr_content_hint"
        android:gravity="top|start"
        android:textSize="@dimen/text_item_desc"
        android:textColor="@color/item_title"
        android:maxLength="1024"
        android:maxLines="10"
        android:padding="@dimen/page_margin"
        android:layout_margin="@dimen/page_margin"
        android:background="@drawable/border_black_1_dp_bg"
        app:layout_constraintTop_toBottomOf="@id/clt_title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/edt_qr_size"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_bar_height"
        android:hint="@string/qr_size"
        android:text="@string/qr_default_size"
        android:textSize="@dimen/text_item_desc"
        android:textColor="@color/item_title"
        android:gravity="center"
        android:background="@drawable/border_black_1_dp_bg"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="4"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/edt_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/page_margin"
        />
    <ImageView
        android:id="@+id/img_qr_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/tv_save_qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintWidth_percent="0.4"
        android:src="@drawable/ic_app"
        />
    <LinearLayout
        android:id="@+id/lyt_add_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edt_qr_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/page_margin"
        android:layout_marginStart="@dimen/page_margin"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/img_choose_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_choosed"
            app:tint="@color/main"
            />
        <TextView
            android:id="@+id/tv_choose_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_logo"
            android:textSize="@dimen/text_item_desc"
            android:textColor="@color/main"
            android:layout_marginStart="@dimen/page_margin"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_create_now"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_bar_height"
        android:text="@string/qr_create"
        android:textSize="@dimen/text_item_title"
        android:textColor="@color/btn_main_txt"
        android:background="@drawable/btn_main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        android:layout_marginBottom="@dimen/page_margin"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_save_qr_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_bar_height"
        android:text="@string/save_qr_code"
        android:textSize="@dimen/text_item_title"
        android:textColor="@color/btn_main_txt"
        android:background="@drawable/btn_main_bg"
        app:layout_constraintTop_toBottomOf="@id/edt_qr_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        android:layout_marginTop="@dimen/page_margin"
        android:gravity="center"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>