<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.testPaperDetail.TestPaperDetailActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clt_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="?colorMain"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back"
            android:layout_marginStart="@dimen/page_margin"
            app:tint="?colorPageTitle"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/page_title_test_paper"
            android:textSize="@dimen/text_page_title"
            android:textColor="?colorPageTitle"
            android:gravity="center"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/pgb_percent"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/clt_title_bar"
        app:layout_constraintBottom_toTopOf="@id/smart_refresh"
        android:progress="0"
        android:max="100"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        />
    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/pgb_percent"
        app:layout_constraintBottom_toTopOf="@id/lyt_opt_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srlEnableLoadMore="false"
        >
        <com.kennyc.view.MultiStateView
            android:id="@+id/multi_stat_view"
            style="@style/MultiStatView"
            >
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:overScrollMode="never"
                />
        </com.kennyc.view.MultiStateView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    <LinearLayout
        android:id="@+id/lyt_opt_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/smart_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="@dimen/page_margin"
        android:background="?colorSplitLine"
        android:visibility="gone"
        >
        <LinearLayout
            android:id="@+id/lyt_opt_top_container"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="?colorSplitLine"
            >
            <Button
                android:id="@+id/btn_prev"
                android:text="@string/prev_question"
                android:textColor="@color/btn_main_txt"
                android:background="@drawable/btn_main_bg"
                android:layout_marginEnd="6dp"
                style="@style/ButtonNoShadow"
                />
            <Button
                android:id="@+id/btn_next"
                android:text="@string/next_question"
                android:textColor="@color/btn_main_txt"
                android:background="@drawable/btn_main_bg"
                android:layout_marginStart="6dp"
                style="@style/ButtonNoShadow"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_opt_bottom_container"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/page_margin"
            android:background="?colorSplitLine"
            >
            <Button
                android:id="@+id/btn_detail"
                android:text="@string/show_test_detail"
                android:textColor="@color/btn_main_txt"
                android:background="@drawable/btn_main_bg"
                android:layout_marginEnd="6dp"
                style="@style/ButtonNoShadow"
                />
            <Button
                android:id="@+id/btn_submit"
                android:text="@string/submit_test_paper"
                android:textColor="@color/btn_warning_txt"
                android:background="@drawable/btn_warning_bg"
                android:layout_marginStart="6dp"
                style="@style/ButtonNoShadow"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>