<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <per.goweii.actionbarex.common.ActionBarCommon
        android:id="@+id/abc"
        style="@style/ActionBarStyle"
        app:abc_titleText="@string/image_compress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/net_scroller_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/abc"
        app:layout_constraintBottom_toTopOf="@id/tv_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:id="@+id/lyt_img_src"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:id="@+id/tv_src_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5.4Mb"
                    android:textSize="@dimen/text_item_title"
                    android:textColor="@color/main"
                    />
                <ImageView
                    android:id="@+id/img_src"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_img_dest"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:id="@+id/tv_dest_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5.4Mb"
                    android:textSize="@dimen/text_item_title"
                    android:textColor="@color/main"
                    />
                <ImageView
                    android:id="@+id/img_dest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView
        android:id="@+id/tv_save"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_bar_height"
        android:text="@string/save_to_photo"
        android:textColor="@color/copy_txt"
        android:textSize="@dimen/text_item_title"
        android:background="@drawable/copy_btn_bg"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_choose_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/page_margin"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        />
    <TextView
        android:id="@+id/tv_compress"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_bar_height"
        android:text="@string/image_compress"
        android:textColor="@color/copy_txt"
        android:textSize="@dimen/text_item_title"
        android:background="@drawable/copy_btn_bg"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_choose_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/page_margin"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        />
    <TextView
        android:id="@+id/tv_choose_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_bar_height"
        android:text="@string/choose_image"
        android:textColor="@color/copy_txt"
        android:textSize="@dimen/text_item_title"
        android:background="@drawable/copy_btn_bg"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/page_margin"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>